force-app/main/default/objects/SIC__c/SIC__c.object-meta.xml
<CustomObject>
    <description>Storage for SIC Data</description>
    <label>SIC</label>
    <nameField>
        <label>SIC Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SIC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>