force-app/main/default/objects/SIC__c/fields/Major_Group__c.field-meta.xml
<CustomField>
    <fullName>Major_Group__c</fullName>
    <description>2 Digit Code</description>
    <label>Major Group</label>
    <length>2</length>
    <type>Text</type>
</CustomField>