force-app/main/default/objects/SIC__c/fields/Major_Group_Description__c.field-meta.xml
<CustomField>
    <fullName>Major_Group_Description__c</fullName>
    <description>2 Digit Description</description>
    <label>Major Group Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>